// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Switch /> > should match snapshot when toggled 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <label
    class="Switch_base__6xc8dy0"
  >
    <div
      class="elements_block__76e2xv3 VisuallyHidden_visuallyHidden__12d73qi0"
    >
      <input
        checked=""
        data-react-aria-pressable="true"
        role="switch"
        tabindex="0"
        type="checkbox"
      />
    </div>
    <div
      class="elements_block__76e2xv3 Switch_toggle__6xc8dy1 focusOutline_focusOutlineStyle__tq83zq0 useTextStyles_root__1xnpmd70 elements_block__76e2xv3 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_sizes_5__1xnpmd75 Switch_toggleOn__6xc8dy2"
      data-active=""
    >
      <div
        class="elements_block__76e2xv3 Switch_handle_default__6xc8dy4 Switch_handle_active__6xc8dy5"
      />
    </div>
  </label>
</div>
`;

exports[`<Switch /> > should match snapshot when toggled and disabled 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <label
    class="Switch_base__6xc8dy0"
  >
    <div
      class="elements_block__76e2xv3 VisuallyHidden_visuallyHidden__12d73qi0"
    >
      <input
        checked=""
        data-react-aria-pressable="true"
        disabled=""
        role="switch"
        type="checkbox"
      />
    </div>
    <div
      class="elements_block__76e2xv3 Switch_toggle__6xc8dy1 focusOutline_focusOutlineStyle__tq83zq0 useTextStyles_root__1xnpmd70 elements_block__76e2xv3 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_sizes_5__1xnpmd75 Switch_disabled__6xc8dy3 Switch_toggleOn__6xc8dy2"
      data-active=""
      data-disabled=""
    >
      <div
        class="elements_block__76e2xv3 Switch_handle_default__6xc8dy4 Switch_handle_active__6xc8dy5"
      />
    </div>
  </label>
</div>
`;

exports[`<Switch /> > should match snapshot when un-toggled 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <label
    class="Switch_base__6xc8dy0"
  >
    <div
      class="elements_block__76e2xv3 VisuallyHidden_visuallyHidden__12d73qi0"
    >
      <input
        data-react-aria-pressable="true"
        role="switch"
        tabindex="0"
        type="checkbox"
      />
    </div>
    <div
      class="elements_block__76e2xv3 Switch_toggle__6xc8dy1 focusOutline_focusOutlineStyle__tq83zq0 useTextStyles_root__1xnpmd70 elements_block__76e2xv3 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_sizes_5__1xnpmd75"
    >
      <div
        class="elements_block__76e2xv3 Switch_handle_default__6xc8dy4"
      />
    </div>
  </label>
</div>
`;

exports[`<Switch /> > should match snapshot when un-toggled and disabled 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <label
    class="Switch_base__6xc8dy0"
  >
    <div
      class="elements_block__76e2xv3 VisuallyHidden_visuallyHidden__12d73qi0"
    >
      <input
        data-react-aria-pressable="true"
        disabled=""
        role="switch"
        type="checkbox"
      />
    </div>
    <div
      class="elements_block__76e2xv3 Switch_toggle__6xc8dy1 focusOutline_focusOutlineStyle__tq83zq0 useTextStyles_root__1xnpmd70 elements_block__76e2xv3 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_sizes_5__1xnpmd75 Switch_disabled__6xc8dy3"
      data-disabled=""
    >
      <div
        class="elements_block__76e2xv3 Switch_handle_default__6xc8dy4"
      />
    </div>
  </label>
</div>
`;

exports[`<Switch /> > should match snapshot without props 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <label
    class="Switch_base__6xc8dy0"
  >
    <div
      class="elements_block__76e2xv3 VisuallyHidden_visuallyHidden__12d73qi0"
    >
      <input
        data-react-aria-pressable="true"
        role="switch"
        tabindex="0"
        type="checkbox"
      />
    </div>
    <div
      class="elements_block__76e2xv3 Switch_toggle__6xc8dy1 focusOutline_focusOutlineStyle__tq83zq0 useTextStyles_root__1xnpmd70 elements_block__76e2xv3 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_sizes_5__1xnpmd75"
    >
      <div
        class="elements_block__76e2xv3 Switch_handle_default__6xc8dy4"
      />
    </div>
  </label>
</div>
`;
